--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "6.9.0",
@@ -17,10 +18,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-"browserslist": [
-  ">0.2%",
-  "not dead",
-  "not ie <= 11",
-  "not op_mini all"
-]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
