--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.10.1",
     "react-router": "6.9.0",
     "react-router-dom": "6.10.0",
     "react-scripts": "4.0.0"
