--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@mui/material": "^5.14.2",
     "bootstrap": "^5.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
